APIs/googleapis.com/content/v2/javascript-client/docs/ProductShipping.md
# ContentApiForShopping.ProductShipping

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**country** | **String** | The CLDR territory code of the country to which an item will ship. | [optional] 
**locationGroupName** | **String** | The location where the shipping is applicable, represented by a location group name. | [optional] 
**locationId** | **String** | The numeric ID of a location that the shipping rate applies to as defined in the AdWords API. | [optional] 
**postalCode** | **String** | The postal code range that the shipping rate applies to, represented by a postal code, a postal code prefix followed by a * wildcard, a range between two postal codes or two postal code prefixes of equal length. | [optional] 
**price** | [**Price**](Price.md) |  | [optional] 
**region** | **String** | The geographic region to which a shipping rate applies. | [optional] 
**service** | **String** | A free-form description of the service class or delivery speed. | [optional] 


